--- a/assets/css/porte-folio.css
+++ b/assets/css/porte-folio.css
@@ -1,57 +1,65 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
-main {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 45% 45%;
-      grid-template-columns: 45% 45%;
-  grid-gap: 1%;
+@media screen and (min-width: 1280px) {
+  main {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 45% 45%;
+        grid-template-columns: 45% 45%;
+    grid-gap: 1%;
+  }
+  main section {
+    background: #00000c;
+    border-radius: 100px 100px 0 0;
+    border: solid rgba(0, 0, 12, 0.376) 10px;
+  }
+  main section h2 {
+    border-bottom: solid white 2px;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+  }
+  main section div {
+    text-align: center;
+    color: white;
+    border-radius: 180px;
+    overflow-wrap: break-word;
+  }
+  main section div button:hover a {
+    color: white;
+    text-decoration: none;
+  }
+  main section div span {
+    color: white;
+  }
 }
 
-main section {
-  background: #00000c;
-  border-radius: 100px 100px 0 0;
-  border: solid rgba(0, 0, 12, 0.376) 10px;
-}
-
-main section h2 {
-  border-bottom: solid white 2px;
-  text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
-}
-
-main section div {
-  text-align: center;
-  color: white;
-  border-radius: 180px;
-  overflow-wrap: break-word;
-}
-
-main section div a {
-  color: #4c85bd;
-  text-decoration: none;
-}
-
-main section div a:after {
-  content: ">";
-}
-
-main section div a:before {
-  content: "<";
-}
-
-main section div a:hover {
-  text-decoration: none;
-}
-
-main section div a:hover:after {
-  content: "<";
-}
-
-main section div a:hover:before {
-  content: ">";
-}
-
-main section div span {
-  color: white;
+@media screen and (max-width: 1280px) {
+  main {
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 1%;
+  }
+  main section {
+    background: #00000c;
+    border-radius: 100px 100px 0 0;
+    border: solid rgba(0, 0, 12, 0.376) 10px;
+  }
+  main section h2 {
+    border-bottom: solid white 2px;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+  }
+  main section div {
+    text-align: center;
+    color: white;
+    border-radius: 180px;
+    overflow-wrap: break-word;
+  }
+  main section div button:hover a {
+    color: white;
+    text-decoration: none;
+  }
+  main section div span {
+    color: white;
+  }
 }
 /*# sourceMappingURL=porte-folio.css.map */
