--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,15 @@ header .cv:active {
   header a {
     font-size: 2.5vw;
     color: white;
+    padding: 10px;
+  }
+  header .nav-item {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+  }
+  header .nav-item:nth-child(2n-1) {
+    background-color: #ffffff38;
   }
 }
 
