--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,268 +1,277 @@
-$C1: white;
-$C2: #4c85bd;
-$C3: #00000C;
-$C3a: #00000c60;
-@import url('https://fonts.googleapis.com/css?family=Oswald');
-body {
-    background-color: $C2;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-// Le header
-header {
-    width: 100%;
-    background-color: $C3;
-    .profil {
-        left: 1%;
-        width: 10%;
-        padding: 0.5%;
-        border-radius: 180px;
-    }
-    .cv {
-        text-align: center;
-        font-family: 'Oswald', sans-serif;
-        width: 10%;
-        background-color: white;
-        border: 1px solid #00000C;
-        padding-left: 1%;
-        padding-right: 1%;
-        border-radius: 0 180px 180px 0;
-        color: #4c85bd;
-        font-size: 2vw;
-        text-decoration: none;
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transition: all 0.2s;
-        transition: all 0.2s;
-        &:hover {
-            color: #00000C;
-            border: 1px solid #4c85bd;
-            -webkit-box-shadow: inset 0 0 5px #4c85bd;
-            box-shadow: inset 0 0 5px #4c85bd;
+        $C1: white;
+        $C2: #4c85bd;
+        $C3: #00000C;
+        $C3a: #00000c60;
+        @import url('https://fonts.googleapis.com/css?family=Oswald');
+        body {
+            background-color: $C2;
         }
-        &:active {
-            -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+        
+        html {
+            scroll-behavior: smooth;
         }
-    }
-    @media screen and (min-width: 1280px) {
-        a {
-            font-size: 1.5vw;
-            color: $C1;
-        }
-    }
-    @media screen and (max-width: 1280px) {
-        a {
-            font-size: 2.5vw;
-            color: $C1;
-        }
-    }
-    .dropdown {
-        &:hover {
-            opacity: 0.9;
-        }
-    }
-    .navbar-toggler {
-        background-color: $C2;
-        border-bottom: 1px $C2 solid;
-        &:active {
-            border-bottom: 5px $C2 solid;
-        }
-    }
-    .navbarDropdownMenuLink {
-        opacity: 0.5;
-        &:hover {
-            opacity: 0.9;
-        }
-    }
-    .dropdown-item {
-        opacity: 0.5;
-        &:hover {
-            opacity: 0.9;
-        }
-    }
-}
-
-// Le main
-@media screen and (min-width: 1280px) {
-    h1,
-    h2 {
-        color: white;
-        font-family: 'Oswald', sans-serif;
-        text-align: center;
-        font-size: 3vw;
-        text-shadow: $C3 0 1px 0;
-    }
-    main {
-        color: $C1;
-        .intro {
-            border-top: $C3a solid 2px;
-            border-bottom: $C3a solid 2px;
-            box-shadow: $C3a 2px 2px 2px;
-            padding: 20px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .inline {
-            display: grid;
-            grid-gap: 5px;
-            grid-template-columns: auto auto;
-            margin: 5px;
-            ul {
+        
+        // Le header
+        header {
+            width: 100%;
+            background-color: $C3;
+            .profil {
+                left: 1%;
+                width: 10%;
+                padding: 0.5%;
+                border-radius: 180px;
+            }
+            .cv {
                 text-align: center;
-                list-style-type: none;
-                .li {
-                    color: $C1;
-                    background-color: $C3;
-                    border-radius: 50px;
-                    padding-left: 5px;
-                    padding-right: 5px;
+                font-family: 'Oswald', sans-serif;
+                width: 10%;
+                background-color: white;
+                border: 1px solid #00000C;
+                padding-left: 1%;
+                padding-right: 1%;
+                border-radius: 0 180px 180px 0;
+                color: #4c85bd;
+                font-size: 2vw;
+                text-decoration: none;
+                -webkit-transform: scale(1);
+                transform: scale(1);
+                -webkit-transition: all 0.2s;
+                transition: all 0.2s;
+                &:hover {
+                    color: #00000C;
+                    border: 1px solid #4c85bd;
+                    -webkit-box-shadow: inset 0 0 5px #4c85bd;
+                    box-shadow: inset 0 0 5px #4c85bd;
+                }
+                &:active {
+                    -webkit-transform: scale(0.9);
+                    transform: scale(0.9);
                 }
             }
-            .technologies,
-            .logiciels,
-            .capacites,
-            .programmes {
-                color: $C1;
-                padding-left: 5px;
-                padding-right: 5px;
-                background-color: $C3a;
-                span {
-                    display: block;
-                    border-bottom: 2px $C1 solid;
-                    width: 100%;
-                    background-color: $C2;
-                    border-radius: 0 0 50px 50px;
+            @media screen and (min-width: 1280px) {
+                a {
+                    font-size: 1.5vw;
+                    color: $C1;
                 }
-                li {
+            }
+            @media screen and (max-width: 1280px) {
+                a {
+                    font-size: 2.5vw;
+                    color: $C1;
+                    padding: 10px;
+                }
+                .nav-item {
+                    width: 100%;
+                    height: 30px;
+                    text-align: center;
                     &:nth-child(2n-1) {
-                        background-color: #00000c3b;
+                        background-color: #ffffff38;
                     }
                 }
-                a {
-                    &:link,
-                    &:visited {
+            }
+            .dropdown {
+                &:hover {
+                    opacity: 0.9;
+                }
+            }
+            .navbar-toggler {
+                background-color: $C2;
+                border-bottom: 1px $C2 solid;
+                &:active {
+                    border-bottom: 5px $C2 solid;
+                }
+            }
+            .navbarDropdownMenuLink {
+                opacity: 0.5;
+                &:hover {
+                    opacity: 0.9;
+                }
+            }
+            .dropdown-item {
+                opacity: 0.5;
+                &:hover {
+                    opacity: 0.9;
+                }
+            }
+        }
+        
+        // Le main
+        @media screen and (min-width: 1280px) {
+            h1,
+            h2 {
+                color: white;
+                font-family: 'Oswald', sans-serif;
+                text-align: center;
+                font-size: 3vw;
+                text-shadow: $C3 0 1px 0;
+            }
+            main {
+                color: $C1;
+                .intro {
+                    border-top: $C3a solid 2px;
+                    border-bottom: $C3a solid 2px;
+                    box-shadow: $C3a 2px 2px 2px;
+                    padding: 20px;
+                    text-align: center;
+                    margin-bottom: 20px;
+                }
+                .inline {
+                    display: grid;
+                    grid-gap: 5px;
+                    grid-template-columns: auto auto;
+                    margin: 5px;
+                    ul {
+                        text-align: center;
+                        list-style-type: none;
+                        .li {
+                            color: $C1;
+                            background-color: $C3;
+                            border-radius: 50px;
+                            padding-left: 5px;
+                            padding-right: 5px;
+                        }
+                    }
+                    .technologies,
+                    .logiciels,
+                    .capacites,
+                    .programmes {
                         color: $C1;
-                        background-color: $C3a;
-                        border-radius: 50px;
                         padding-left: 5px;
                         padding-right: 5px;
-                        text-decoration: none;
-                        transition: padding-left 0.5s;
-                        &:hover {
-                            padding-left: 10px;
-                            padding-right: 10px;
+                        background-color: $C3a;
+                        span {
+                            display: block;
+                            border-bottom: 2px $C1 solid;
+                            width: 100%;
+                            background-color: $C2;
+                            border-radius: 0 0 50px 50px;
+                        }
+                        li {
+                            &:nth-child(2n-1) {
+                                background-color: #00000c3b;
+                            }
+                        }
+                        a {
+                            &:link,
+                            &:visited {
+                                color: $C1;
+                                background-color: $C3a;
+                                border-radius: 50px;
+                                padding-left: 5px;
+                                padding-right: 5px;
+                                text-decoration: none;
+                                transition: padding-left 0.5s;
+                                &:hover {
+                                    padding-left: 10px;
+                                    padding-right: 10px;
+                                }
+                            }
                         }
                     }
                 }
             }
         }
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    h1,
-    h2 {
-        color: white;
-        font-family: 'Oswald', sans-serif;
-        text-align: center;
-        font-size: 6vw;
-        text-shadow: $C3 0 1px 0;
-    }
-    main {
-        color: $C1;
-        .intro {
-            border-top: $C3a solid 2px;
-            border-bottom: $C3a solid 2px;
-            text-align: center;
-            padding: 5px;
-        }
-        .inline {
-            display: grid;
-            grid-gap: 5px;
-            grid-template-columns: auto;
-            margin: 5px;
-            ul {
+        
+        @media screen and (max-width: 1280px) {
+            h1,
+            h2 {
+                color: white;
+                font-family: 'Oswald', sans-serif;
                 text-align: center;
-                list-style-type: none;
-                .li {
-                    color: $C1;
-                    background-color: $C3;
-                    border-radius: 50px;
-                    padding-left: 5px;
-                    padding-right: 5px;
-                }
+                font-size: 6vw;
+                text-shadow: $C3 0 1px 0;
             }
-            .technologies,
-            .logiciels,
-            .capacites,
-            .programmes {
+            main {
                 color: $C1;
-                padding-left: 5px;
-                padding-right: 5px;
-                background-color: $C3a;
-                span {
-                    display: block;
-                    border-bottom: 2px $C1 solid;
-                    width: 100%;
-                    background-color: $C2;
-                    border-radius: 0 0 50px 50px;
+                .intro {
+                    border-top: $C3a solid 2px;
+                    border-bottom: $C3a solid 2px;
+                    text-align: center;
+                    padding: 5px;
                 }
-                li {
-                    &:nth-child(2n-1) {
-                        background-color: rgba(0, 0, 12, 0.231);
+                .inline {
+                    display: grid;
+                    grid-gap: 5px;
+                    grid-template-columns: auto;
+                    margin: 5px;
+                    ul {
+                        text-align: center;
+                        list-style-type: none;
+                        .li {
+                            color: $C1;
+                            background-color: $C3;
+                            border-radius: 50px;
+                            padding-left: 5px;
+                            padding-right: 5px;
+                        }
                     }
-                }
-                a {
-                    &:link,
-                    &:visited {
+                    .technologies,
+                    .logiciels,
+                    .capacites,
+                    .programmes {
                         color: $C1;
-                        background-color: $C3a;
-                        border-radius: 50px;
                         padding-left: 5px;
                         padding-right: 5px;
-                        text-decoration: none;
-                        transition: padding-left 0.5s;
-                        &:hover {
-                            padding-left: 10px;
-                            padding-right: 10px;
+                        background-color: $C3a;
+                        span {
+                            display: block;
+                            border-bottom: 2px $C1 solid;
+                            width: 100%;
+                            background-color: $C2;
+                            border-radius: 0 0 50px 50px;
+                        }
+                        li {
+                            &:nth-child(2n-1) {
+                                background-color: rgba(0, 0, 12, 0.231);
+                            }
+                        }
+                        a {
+                            &:link,
+                            &:visited {
+                                color: $C1;
+                                background-color: $C3a;
+                                border-radius: 50px;
+                                padding-left: 5px;
+                                padding-right: 5px;
+                                text-decoration: none;
+                                transition: padding-left 0.5s;
+                                &:hover {
+                                    padding-left: 10px;
+                                    padding-right: 10px;
+                                }
+                            }
                         }
                     }
                 }
             }
         }
-    }
-}
-
-// Les applications
-footer {
-    .description {
-        border-top: $C3a solid 2px;
-        border-bottom: $C3a solid 2px;
-        box-shadow: $C3a 2px 2px 2px;
-        padding: 20px;
-        text-align: center;
-        color: $C1;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .appsview {
-        display: grid;
-        grid-gap: 20px;
-        grid-template-columns: auto auto;
-        margin: 10px;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .appsview {
-        display: grid;
-        grid-gap: 10px;
-        grid-template-columns: auto;
-        margin: 10px;
-    }
-}
+        
+        // Les applications
+        footer {
+            .description {
+                border-top: $C3a solid 2px;
+                border-bottom: $C3a solid 2px;
+                box-shadow: $C3a 2px 2px 2px;
+                padding: 20px;
+                text-align: center;
+                color: $C1;
+            }
+        }
+        
+        @media screen and (min-width: 1280px) {
+            .appsview {
+                display: grid;
+                grid-gap: 20px;
+                grid-template-columns: auto auto;
+                margin: 10px;
+            }
+        }
+        
+        @media screen and (max-width: 1280px) {
+            .appsview {
+                display: grid;
+                grid-gap: 10px;
+                grid-template-columns: auto;
+                margin: 10px;
+            }
+        }
