--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -3,7 +3,6 @@ $C2: rgb(76, 133, 189);
 $C3: rgb(0, 0, 12);
 $C3a: rgba(0, 0, 12, 0.376);
 @import url('https://fonts.googleapis.com/css?family=Oswald');
-// Le header
 header {
     width: 100%;
     background-color: $C3;
@@ -50,6 +49,10 @@ header {
         a {
             font-size: 2.5vw;
             color: $C1;
+        }
+        .nav-item {
+            width: 100%;
+            height: 30px;
         }
     }
     .dropdown {
