--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,8 +31,13 @@
             padding-left: 1%;
             padding-right: 1%;
             border-radius: 0 180px 180px 0;
-            color: #4c85bd;
-            font-size: 2vw;
+            color: #4c85bd !important;
+            @media screen and (min-width: 990px) {
+                font-size: 2vw;
+            }
+            @media screen and (max-width: 990px) {
+                font-size: 5vw;
+            }
             text-decoration: none;
             -webkit-transform: scale(1);
             transform: scale(1);
@@ -52,13 +57,13 @@
         @media screen and (min-width: 1280px) {
             a {
                 font-size: 1.5vw;
-                color: $C1;
+                color: $C1 !important;
             }
         }
         @media screen and (max-width: 1280px) {
             a {
                 font-size: 2.5vw;
-                color: $C1;
+                color: $C1 !important;
             }
             .nav-item {
                 width: 100%;
