--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,16 +62,16 @@ header .cv:active {
 }
 
 @media screen and (min-width: 1280px) {
-  header a {
+  header a:not(.dropdown-item) {
     font-size: 1.5vw;
-    color: white !important;
+    color: white;
   }
 }
 
 @media screen and (max-width: 1280px) {
-  header a {
+  header a:not(.dropdown-item) {
     font-size: 2.5vw;
-    color: white !important;
+    color: white;
   }
   header .nav-item {
     width: 100%;
