--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -55,15 +55,15 @@
             }
         }
         @media screen and (min-width: 1280px) {
-            a {
+            a:not(.dropdown-item) {
                 font-size: 1.5vw;
-                color: $C1 !important;
+                color: $C1;
             }
         }
         @media screen and (max-width: 1280px) {
-            a {
+            a:not(.dropdown-item) {
                 font-size: 2.5vw;
-                color: $C1 !important;
+                color: $C1;
             }
             .nav-item {
                 width: 100%;
