--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,15 @@
         scroll-behavior: smooth;
     }
     
+    .lien_magique {
+        color: yellow;
+        &:hover {
+            color: yellow;
+            text-decoration: none;
+            text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow !important;
+        }
+    }
+    
     // Le header
     header {
         width: 100%;
@@ -115,6 +124,13 @@
                 padding: 20px;
                 text-align: center;
                 margin-bottom: 20px;
+                a {
+                    color: yellow;
+                    &:hover {
+                        text-decoration: none;
+                        text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow;
+                    }
+                }
             }
             .inline {
                 display: grid;
@@ -193,6 +209,13 @@
                 border-bottom: $C3a solid 2px;
                 text-align: center;
                 padding: 5px;
+                a {
+                    color: yellow;
+                    &:hover {
+                        text-decoration: none;
+                        text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow;
+                    }
+                }
             }
             .inline {
                 display: grid;
@@ -330,28 +353,38 @@
             .parc {
                 display: grid;
                 grid-gap: 20px;
-                grid-template-columns: auto auto;
+                grid-template-columns: auto;
                 margin: 10px;
                 article {
-                    &:nth-child(2n) {
-                        background-color: #fff;
-                        border: 1px solid rgba(0, 0, 0, .125);
-                    }
-                    position: relative;
-                    display: -ms-flexbox;
-                    display: flex;
-                    -ms-flex-direction: column;
-                    flex-direction: column;
-                    min-width: 0;
-                    word-wrap: break-word;
-                    background-clip: border-box;
-                    border-radius: .25rem;
-                    h3 {
-                        font-family: 'Open Sans', sans-serif;
-                    }
-                    img {
-                        width: 10vw;
-                        margin: auto auto;
+                    grid-template-columns: 12vw auto;
+                    display: grid;
+                    grid-gap: 20px;
+                    div {
+                        img {
+                            width: 12vw;
+                            margin: auto auto;
+                            height: 12vw;
+                            display: block;
+                        }
+                        height: 10vw;
+                        &:nth-child(2n) {
+                            height: 12vw;
+                            font-size: 0.9vw;
+                            background-color: #fff;
+                            border: 1px solid rgba(0, 0, 0, .125);
+                            position: relative;
+                            display: -ms-flexbox;
+                            display: flex;
+                            -ms-flex-direction: column;
+                            flex-direction: column;
+                            min-width: 0;
+                            word-wrap: break-word;
+                            background-clip: border-box;
+                            border-radius: .25rem;
+                            h3 {
+                                font-family: 'Open Sans', sans-serif;
+                            }
+                        }
                     }
                 }
             }
@@ -363,26 +396,32 @@
                 grid-template-columns: auto;
                 margin: 10px;
                 article {
-                    &:nth-child(2n) {
-                        background-color: #fff;
-                        border: 1px solid rgba(0, 0, 0, .125);
-                    }
-                    position: relative;
-                    display: -ms-flexbox;
-                    display: flex;
-                    -ms-flex-direction: column;
-                    flex-direction: column;
-                    min-width: 0;
-                    word-wrap: break-word;
-                    background-clip: border-box;
-                    border-radius: .25rem;
-                    h3 {
-                        font-family: 'Open Sans', sans-serif;
-                        font-size: 1.2em;
-                    }
                     img {
                         width: 10%;
                         margin: auto auto;
+                        height: 10%;
+                        display: block;
+                    }
+                    height: 10%;
+                    div {
+                        &:nth-child(2n) {
+                            background-color: #fff;
+                            border: 1px solid rgba(0, 0, 0, .125);
+                            position: relative;
+                            display: -ms-flexbox;
+                            display: flex;
+                            -ms-flex-direction: column;
+                            flex-direction: column;
+                            min-width: 0;
+                            word-wrap: break-word;
+                            background-clip: border-box;
+                            border-bottom-right-radius: .25em;
+                            border-bottom-left-radius: .25em;
+                            h3 {
+                                font-family: 'Open Sans', sans-serif;
+                                font-size: 1.2em;
+                            }
+                        }
                     }
                 }
             }
