--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -1,182 +1,273 @@
-    $C1: rgb(192, 192, 192);
-    $C2: #4c85bd;
-    $C3: #00000C;
-    $C4:white;
-    $C5:rgb(100, 100, 100);
-    @import url("https://fonts.googleapis.com/css?family=Oswald");
-    header {
-        color: $C4;
+$C1: rgb(192, 192, 192);
+$C2: #4c85bd;
+$C3: #00000C;
+$C4:white;
+$C5:rgb(100, 100, 100);
+@import url("https://fonts.googleapis.com/css?family=Oswald");
+main {
+    @media screen and (orientation: portrait) {
+        display: block;
+    }
+    @media screen and (orientation:landscape) {
         display: grid;
-        grid-template-columns: 50% 50%;
-        background-color: $C3;
-        div:nth-child(1) {
-            text-align: center;
-            margin: auto auto;
-            img {
-                margin-left: auto;
-                margin-right: auto;
-                width: 15vw;
-                height: 15vw;
-                border-radius: 360px;
+        grid-template-columns: 0.5fr 1.5fr;
+        grid-template-rows: 1fr;
+        gap: 0px 0px;
+        grid-template-areas: ". .";
+    }
+    section {
+        &:first-child {
+            background-color: $C2;
+            margin: 0;
+            .profil {
+                margin: 50px auto;
+                width: 150px;
+                height: 150px;
+                clip-path: path('M0,64c0,35.346,31.992,54.489,62.04,81.702C115.331,106.299,128,99.346,128,64c0-35.346-28.654-64-64-64 C28.653, 0, 0, 28.654, 0, 64');
+                background-image: url(../image/profil.jpeg);
+                background-size: 155px 155px;
+                transform: scale(1.5);
+            }
+            .coordonnee {
+                background-color: transparent;
+                @media screen and (orientation: portrait) {
+                    height: 150px
+                }
+                a {
+                    color: $C4;
+                    text-decoration: underline;
+                    &:hover {
+                        color: $C3;
+                    }
+                }
+            }
+            .reseaux {
+                background-color: transparent;
+                svg {
+                    a {
+                        &:hover {
+                            fill-opacity: 0.5;
+                        }
+                    }
+                }
+            }
+            .langues {
+                @media screen and (orientation: landscape) {
+                    width: 100%;
+                }
+                @media screen and (orientation: portrait) {
+                    .card-body {
+                        padding: 0;
+                        display: grid;
+                        grid-template-columns: 1fr 1fr;
+                        grid-template-rows: 1fr;
+                        gap: 0px 0px;
+                        grid-template-areas: ". .";
+                        p {
+                            font-size: 10px;
+                        }
+                    }
+                }
+                background-color: transparent;
             }
         }
-        div:nth-child(2) {
-            background-color: $C1;
-            padding: 10px;
-            h1 {
-                font-size: 5vw;
+        &:last-child {
+            background-color: $C4;
+            color: black;
+            h3 {
+                display: inline-block;
+                background: $C2;
+                color: white;
+                width: 100%;
                 text-align: center;
+                text-transform: uppercase;
+                border-radius: 0px 0px 40px 0px;
             }
-            .type {
-                background-color: $C5;
-                color: $C1;
-                text-align: center;
-                padding-top: 20px;
-                padding-bottom: 20px;
-                font-size: 2vw;
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                span {
-                    word-wrap: break-word;
-                    &:nth-child(n+2) {
-                        &:before {
-                            content: " + "
+            .metiers {
+                @media screen and (orientation: portrait) {
+                    margin-bottom: 20px;
+                    .card {
+                        margin-bottom: 15px;
+                    }
+                    p {
+                        font-size: 15px;
+                        margin: auto auto;
+                        i {
+                            margin-right: 5px;
+                        }
+                    }
+                }
+                @media screen and (orientation:landscape) {
+                    margin: auto;
+                    margin-top: 50px;
+                    margin-bottom: 20px;
+                    width: 95%;
+                    .card {
+                        margin: 0 0.1vw;
+                    }
+                    p {
+                        font-size: 20px;
+                        margin: auto auto;
+                        i {
+                            margin-right: 5px;
+                        }
+                    }
+                }
+                .vm {
+                    background-color: red;
+                    color: white !important;
+                    .icon {
+                        position: absolute;
+                        left: 50%;
+                        bottom: -15px;
+                        color: red;
+                        -webkit-text-stroke-width: 1px;
+                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
+                    }
+                }
+                .photo {
+                    background-color: black;
+                    color: white !important;
+                    .icon {
+                        position: absolute;
+                        left: 50%;
+                        bottom: -15px;
+                        color: black;
+                        -webkit-text-stroke-width: 1px;
+                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
+                    }
+                }
+                .cm {
+                    background-color: $C2;
+                    color: white !important;
+                    .icon {
+                        position: absolute;
+                        left: 50%;
+                        bottom: -15px;
+                        color: $C2;
+                        -webkit-text-stroke-width: 1px;
+                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
+                    }
+                }
+                .js {
+                    background-color: yellow;
+                    color: black;
+                    .icon {
+                        position: absolute;
+                        left: 50%;
+                        bottom: -15px;
+                        color: yellow;
+                        -webkit-text-stroke-width: 1px;
+                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
+                    }
+                }
+            }
+            .competence {
+                .card {
+                    color: black;
+                    .card-title {
+                        text-align: center;
+                        .icon {
+                            position: absolute;
+                            right: 0;
+                            top: 0;
+                            -webkit-text-stroke-width: 1px;
+                            -webkit-text-stroke-color: black;
+                            .vm {
+                                color: red;
+                            }
+                            .photo {
+                                color: black;
+                            }
+                            .cm {
+                                color: $C2;
+                            }
+                            .js {
+                                color: yellow;
+                            }
+                        }
+                    }
+                    ul {
+                        list-style-type: none;
+                        background: transparent;
+                        text-align: left;
+                        li {
+                            .prog {
+                                width: 20px;
+                                margin-right: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+            .formations,
+            .stage {
+                p {
+                    margin-left: 5px;
+                    b:first-child {
+                        color: $C2;
+                    }
+                    .icon {
+                        -webkit-text-stroke-width: 1px;
+                        -webkit-text-stroke-color: black;
+                        .vm {
+                            color: red;
+                        }
+                        .photo {
+                            color: black;
+                        }
+                        .cm {
+                            color: $C2;
+                        }
+                        .js {
+                            color: yellow;
+                        }
+                    }
+                }
+            }
+            .hobbies {
+                .hob {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-rows: 1fr 1fr;
+                    gap: 10px 20px;
+                    grid-template-areas: ". ." ". .";
+                    padding: 10px 20px;
+                    div {
+                        padding: 10px 10px;
+                        ul {
+                            list-style-type: "- ";
+                            background: transparent;
+                            text-align: left;
+                            color: white;
+                            font-weight: bold;
+                        }
+                        h4 {
+                            text-align: center;
+                            text-decoration: underline;
+                            font-weight: bold;
+                        }
+                        &:nth-child(1) {
+                            background-color: red;
+                            color: white;
+                        }
+                        &:nth-child(2) {
+                            background-color: $C2;
+                            color: white;
+                        }
+                        &:nth-child(3) {
+                            background-color: black;
+                            color: white;
+                        }
+                        &:nth-child(4) {
+                            background-color: yellow;
+                            ul {
+                                color: black;
+                            }
                         }
                     }
                 }
             }
         }
     }
-    
-    @media screen and (min-width: 810px) {
-        main {
-            color: $C4;
-            display: grid;
-            grid-template-columns: 50% 50%;
-            .gauche {
-                text-align: center;
-                background-color: $C3;
-                padding: 10px;
-                div {
-                    text-align: center;
-                    margin-bottom: 25px;
-                    margin-top: 25px;
-                    img {
-                        margin-left: auto;
-                        margin-right: auto;
-                        width: 15vw;
-                        height: 15vw;
-                        border-radius: 360px;
-                    }
-                }
-            }
-            .droit {
-                background-color: $C1;
-            }
-            ul {
-                color: $C5;
-                list-style-type: none;
-            }
-        }
-        h1,
-        h2 {
-            color: $C2
-        }
-        h2 {
-            font-size: 2.5em;
-        }
-        h3 {
-            color: $C5;
-        }
-        // Le bouton du retour à la page d'acceuil
-        .retour {
-            position: fixed;
-            top: 0;
-            left: 0;
-            padding: 5px;
-            text-align: center;
-            background: $C2;
-            border: $C4 solid 1px;
-            color: $C4;
-            a {
-                &:link,
-                &:visited {
-                    text-decoration: none;
-                    color: white;
-                    &:hover {
-                        color: $C3;
-                    }
-                }
-            }
-        }
-    }
-    
-    @media screen and (max-width: 810px) {
-        li {
-            font-size: 3.5vw;
-        }
-        main {
-            color: $C4;
-            display: grid;
-            grid-template-columns: 100%;
-            .gauche {
-                text-align: center;
-                background-color: $C3;
-                padding: 20px;
-                div {
-                    text-align: center;
-                    margin-bottom: 25px;
-                    margin-top: 25px;
-                    img {
-                        margin-left: auto;
-                        margin-right: auto;
-                        width: 15vw;
-                        height: 15vw;
-                        border-radius: 360px;
-                    }
-                }
-            }
-            .droit {
-                background-color: $C1;
-                padding: 20px;
-            }
-            ul {
-                color: $C5;
-                list-style-type: none;
-            }
-        }
-        h1,
-        h2 {
-            color: $C2;
-            text-transform: uppercase;
-            font-family: 'Oswald', sans-serif;
-        }
-        h2 {
-            font-size: 6.5vw;
-        }
-        h3 {
-            color: $C5;
-            font-size: 5.5vw;
-            font-family: 'Oswald', sans-serif;
-        }
-        // Le bouton du retour à la page d'acceuil
-        .retour {
-            display: block;
-            padding: 10vw;
-            text-align: center;
-            background: $C2;
-            border: $C4 solid 5px;
-            color: $C4;
-            font-size: 20px;
-            a {
-                &:link,
-                &:visited {
-                    text-decoration: none;
-                    color: white;
-                    &:hover {
-                        color: $C3;
-                    }
-                }
-            }
-        }
-    }
+}
